--- a/metal/inventories/prod.yml
+++ b/metal/inventories/prod.yml
@@ -1,15 +1,40 @@
 all:
   vars:
-    control_plane_endpoint: 192.168.1.100
+    control_plane_endpoint: 192.168.2.210
     load_balancer_ip_pool:
-      - 192.168.1.224/27
+      - 192.168.2.224/27
 metal:
   children:
     masters:
       hosts:
-        metal0: {ansible_host: 192.168.1.110, mac: '00:23:24:d1:f5:69', disk: sda, network_interface: eno1}
-        metal1: {ansible_host: 192.168.1.111, mac: '00:23:24:d1:f3:f0', disk: sda, network_interface: eno1}
-        metal2: {ansible_host: 192.168.1.112, mac: '00:23:24:e7:04:60', disk: sda, network_interface: eno1}
+        metal0:
+          {
+            ansible_host: 192.168.2.211,
+            mac: "52:54:00:21:eb:34",
+            disk: vda,
+            network_interface: ens3,
+          }
+        metal1:
+          {
+            ansible_host: 192.168.2.212,
+            mac: "52:54:00:51:91:d7",
+            disk: vda,
+            network_interface: ens3,
+          }
+        metal2:
+          {
+            ansible_host: 192.168.2.213,
+            mac: "52:54:00:56:8e:ca",
+            disk: vda,
+            network_interface: ens3,
+          }
     workers:
       hosts:
-        metal3: {ansible_host: 192.168.1.113, mac: '00:23:24:d1:f4:d6', disk: sda, network_interface: eno1}
+        metal3:
+          {
+            ansible_host: 192.168.2.214,
+            mac: "52:54:00:20:24:ad",
+            disk: vda,
+            network_interface: ens3,
+          }
+
