change: use non-ha pg for gitea

--- a/platform/gitea/values.yaml
+++ b/platform/gitea/values.yaml
@@ -16,6 +16,10 @@ gitea:
   gitea:
     admin:
       existingSecret: gitea-admin-secret
+    postgresql:
+      enabled: true
+    postgresql-ha:
+      enabled: false
     config:
       server:
         LANDING_PAGE: explore
